# check-dns-auth

./: .pre-commit-config.yaml  README.md  check_dns_auth.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
src/: check_dns_auth.py
src/check_dns_auth/: __init__.py  check.py  cli.py  evaluation.py  model.py  queries.py  version.py
tests/: __init__.py  test_args.py  test_check.py  test_evaluate.py  test_queries.py
