[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "check-dns-auth"
description = "Nagios/Icinga plugin for checking authoritative DNS consistency."
authors = [
    {name = "Matthew Pounsett", email = "matt@NimbusOps.com"}
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
    "check",
    "dns",
    "dnssec",
    "icinga",
    "monitoring",
    "nagios"
]
requires-python = ">= 3.10"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Plugins',
    'Environment :: Console',
    'Intended Audience :: System Administrators',
    'Natural Language :: English',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python',
    'Topic :: Internet :: Name Service (DNS)',
    'Topic :: System :: Monitoring'
]
dependencies = [
    "dnspython",
    "nagiosplugin"
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/Nimbus-Operations/check-dns-auth"
Issues = "https://github.com/Nimbus-Operations/check-dns-auth/issues"

[project.scripts]
check_dns_auth = "check_dns_auth.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["check_dns_auth"]

[tool.setuptools.dynamic]
version = {attr = "check_dns_auth.version.__version__"}

[dependency-groups]
dev = [
    "isort",
    "mkdocs",
    "mkdocs-material",
    "mypy",
    "pre-commit",
    "pymdown-extensions",
    "pytest",
    "pytest-cov",
    "build",
    "setuptools",
    "twine",
    "keyring",
    "tox"
]
test = [
    "pytest",
    "pytest-cov"
]

[tool.pylint.format]
max-line-length = 100

[tool.mypy]
python_version = "3.10"
files = ["src/check_dns_auth"]
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["nagiosplugin"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
respect-gitignore = true

[tool.ruff.lint]
# more flake8-like; selecting the whole E group includes E501
extend-select = ["E", "F", "W"]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tox]
envlist = [
    "bandit",
    "clean",
    "pip-audit",
    "py310",
    "py311",
    "py312",
    "py313",
    "py314",
    "mypy",
    "pydocstyle",
    "pylint",
    "ruff",
    "stats"
]
skip_missing_interpreters = false

[tool.tox.env_run_base]
description = "run unit tests"
commands = [
    [
        "pytest",
        "-v",
        "--cov=check_dns_auth",
        "--cov-report=html",
        "--cov-append",
        {replace = "posargs", default = ["tests"], extend = true}
    ]
]
dependency_groups = [
    "test"
]

[tool.tox.env.clean]
description = "clean up old coverage data"
commands = [["coverage", "erase"]]
deps = ["coverage"]
skip_install = true

[tool.tox.env.stats]
description = "generate coverage report"
commands = [
    ["coverage", "report"],
    ["coverage", "html"]
]
deps = ["coverage"]
skip_install = true

[tool.tox.env.bandit]
description = "run bandit security scan"
commands = [["bandit", "-r", "src", "-q"]]
deps = ["bandit"]
ignore_errors = true

[tool.tox.env.pip-audit]
description = "run pip-audit"
commands = [["pip-audit", "--skip-editable"]]
deps = ["pip-audit"]
ignore_errors = true

[tool.tox.env.pydocstyle]
description = "run pydocstyle"
commands = [["pydocstyle", "src", "tests"]]
deps = ["pydocstyle"]
ignore_errors = true

[tool.tox.env.mypy]
description = "run mypy"
commands = [["mypy", "src/check_dns_auth"]]
deps = ["mypy"]
ignore_errors = true

[tool.tox.env.pylint]
description = "run pylint"
commands = [["pylint", "src/check_dns_auth", "tests"]]
deps = ["pylint"]
ignore_errors = true

[tool.tox.env.ruff]
description = "run ruff"
commands = [["ruff", "check", "src", "tests"]]
deps = ["ruff"]
ignore_errors = true
